@startuml CommonAPIRequestAndResponse

' Common API Request and Response Models

namespace vn.com.fecredit.app.service.dto {

    enum ObjectType {
        Event
        Region
        Province
        Reward
        GoldenHour
        SpinHistory
        AuditLog
        Statistics
        User
        Role
        Permission
        Configuration
        BlacklistedToken
        EventLocation
        Participant
        ParticipantEvent
    }

    enum FetchStatus {
        SUCCESS
        NO_DATA
        ERROR
        INVALID_REQUEST
        ACCESS_DENIED
    }

    enum SortType {
        ASCENDING
        DESCENDING
        NONE
    }

    enum FilterType {
        EQUALS
        NOT_EQUALS
        LESS_THAN
        LESS_THAN_OR_EQUALS
        GREATER_THAN
        GREATER_THAN_OR_EQUALS
        BETWEEN
        IN
        NOT_IN
    }

    class DataObjectKey {
        List<String> keys
    }

    class DataObjectKeyValues {
        Map<String, Object> searchCriteria
    }

    class TableRow {
        Map<String, Object> data
    }

    class TabTableRow {
        List<String> relatedTables
    }

    class DataObject {
        ObjectType objectType
        DataObjectKey key
        Map<String, ColumnInfo> fieldNameMap
        String description
        TableRow data
        Integer order
    }

    enum TableAction {
        ADD
        UPDATE
        DELETE
        VIEW
        EXPORT
        IMPORT
    }

    class TableFetchRequest {
        ObjectType objectType
        String entityName
        int page
        int size
        List<SortRequest> sorts
        List<FilterRequest> filters
        Map<ObjectType, DataObject> search
        Map<String, ColumnInfo> viewColumns
    }

    class TableFetchResponse {
        TableFetchRequest originalRequest
        StatisticsInfo statistics
    }

    class TableInfo {
        DataObjectKey key
        FetchStatus status
        String message
        Integer totalPage
        Integer currentPage
        Integer pageSize
        Long totalElements
        String tableName
        Map<String, ColumnInfo> fieldNameMap
        List<TableRow> rows
        Map<ObjectType, DataObject> relatedLinkedObjects
    }

    class FilterRequest {
        String field
        FilterType filterType
        String minValue
        String maxValue
    }

    class SortRequest {
        String field
        SortType sortType
    }

    class ColumnInfo {
        ObjectType objectType
        String fieldName
        String fieldType
        SortType sortType
    }

    class StatisticsInfo {
        Map<String, List<ChartInfo>> charts
    }

    class ChartInfo {
        String chartName
        String chartType
        Map<String, List<String>> chartData
    }


    TableFetchResponse --|> TableInfo
    TabTableRow --|> TableRow
    TableFetchResponse --> TableFetchRequest
    TableFetchResponse --> StatisticsInfo
    TableFetchRequest --> ObjectType
    TableInfo --> FetchStatus
    TableFetchRequest --> SortRequest
    TableFetchRequest --> FilterRequest
    SortRequest --> SortType
    FilterRequest --> FilterType
    StatisticsInfo --> ChartInfo

    enum TableAction {
        ADD
        UPDATE
        DELETE
        VIEW
        EXPORT
        IMPORT
    }

    class TableActionRequest {
        ObjectType objectType
        String entityName
        TableAction action
        TableRow data
        UploadFile uploadFile
        List<SortRequest> sorts
        List<FilterRequest> filters
        Map<ObjectType, DataObject> search
    }

    class UploadFile {
        String fileName
        byte[] fileContent
    }

    class TableActionResponse {
        TableActionRequest originalRequest
    }

}

@enduml
